test/types/type_variables/diten/typeTupleOOB.0.good
typeTupleOOB.chpl:4: error: type index expression '0' out of bounds
