test/types/type_variables/diten/typeTupleOOB.chpl
config param idx = 1;
type t = (int, real, string);

writeln(t(idx):string);
